--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,13 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+valid_user: 
+  id: 1
+  screen_name: millikan
+  email: ram@example.com
+  password: electron 
+invalid_user: 
+  id: 2
+  screen_name: aa noyes
+  email: anoyes@example.com
+  password: sun
